--- a/techbookfest13-0923/tex/slide.tex
+++ b/techbookfest13-0923/tex/slide.tex
@@ -148,6 +148,33 @@ $\times$ \\
   \end{center}
 \end{frame}
 
+
+{\usebackgroundtemplate{%
+  \begin{tikzpicture}[remember picture, overlay]
+    \node[opacity=0.2,inner sep=0pt,yshift=-10pt] at (current page.center)
+      {\includegraphics[height=180pt]{figures/peering.jpg}};
+  \end{tikzpicture}}
+\begin{frame}[plain]
+  \begin{center}
+    \HUGE{23}{23}\color{kachi}\yasagoth
+    \bw{突然ですがクーポンのお知らせ}
+    
+    \bw{{\HUGE{19}{19}『ピアリング戦記』PDF版が20\%オフ！}}
+
+    \bw{{\HUGE{15}{15}クーポンコード}}
+    
+    \bw{\HUGE{25}{25}「シンカンオマチランド」}
+    
+    \includegraphics[width=3\baselineskip]{figures/qrcode_202209221925.png}
+    
+    \bw{\HUGE{12}{12}\myurl{https://www.lambdanote.com/products/peering-ebook}}
+    
+    \bw{\HUGE{15}{15}期間限定 2022/9/23 ～ 9/25 まで}
+    
+  \end{center}
+\end{frame}}
+
+
 \setbeamertemplate{itemize item}{§}
 \setbeamertemplate{itemize subitem}{$-$}
 \setbeamercolor{itemize/enumerate body}{fg=kachi!70}
