--- a/texconf2024/presentation.tex
+++ b/texconf2024/presentation.tex
@@ -31,7 +31,7 @@
   \begin{itemize}
     \item 文字の色は均一であることが多い
     \item 1文字が複数の色で塗り分けられる場合
-    \item 実装編（特に装飾的タイポグラフィを\TeX{}で）
+    \item 実装編（装飾的タイポグラフィ）
   \end{itemize}
 \end{frame}
 
@@ -139,7 +139,9 @@
 \begin{frame}[plain]
   \begin{center}
     \HUGE{34}{34}\color{black}
-    実装編
+    実装編\par
+    \HUGE{23}{23}\color{50gray}
+    （装飾的タイポグラフィ）
   \end{center}
 \end{frame}
 
